re PR middle-end/17961 (ICE for operation on small vector with altivec enabled)

PR 17961
        * config/rs6000/sysv4.h (ROUND_TYPE_ALIGN): Remove.
        * config/rs6000/linux64.h (ROUND_TYPE_ALIGN): Remove vector check.
        * testsuite/gcc.dg/simd-3.c: New.

From-SVN: r101790